--- a/DataStructure/DataStructure.vcxproj
+++ b/DataStructure/DataStructure.vcxproj
@@ -167,7 +167,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DoublyLinkedList.cpp" />
+    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="SingleLinkedList.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
